create src and a image

--- a/www/index.html
+++ b/www/index.html
@@ -1,3 +1,12 @@
-ahora si estoy escribiendo bien
-b
-by lokeng
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Esta si es de verdad</title>
+</head>
+<body>
+
+</body>
+</html>
